Revert "26.1 Update (#6266)"
This reverts commit 9ffe8e4d6dcaa2d2a73c7fc09e37054f0a9dff7c.

Resolve conflicts