@@ -14,15 +14,16 @@ import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 import meteordevelopment.meteorclient.systems.macros.Macro;
 import meteordevelopment.meteorclient.systems.macros.Macros;
-import net.minecraft.commands.SharedSuggestionProvider;
-import net.minecraft.network.chat.Component;
+import net.minecraft.command.CommandSource;
+import net.minecraft.text.Text;
 
 import java.util.Collection;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 public class MacroArgumentType implements ArgumentType<Macro> {
     private static final MacroArgumentType INSTANCE = new MacroArgumentType();
-    private static final DynamicCommandExceptionType NO_SUCH_MACRO = new DynamicCommandExceptionType(name -> Component.literal("Macro with name " + name + " doesn't exist."));
+    private static final DynamicCommandExceptionType NO_SUCH_MACRO = new DynamicCommandExceptionType(name -> Text.literal("Macro with name " + name + " doesn't exist."));
 
     public static MacroArgumentType create() {
         return INSTANCE;
@@ -32,8 +33,7 @@ public class MacroArgumentType implements ArgumentType<Macro> {
         return context.getArgument("macro", Macro.class);
     }
 
-    private MacroArgumentType() {
-    }
+    private MacroArgumentType() {}
 
     @Override
     public Macro parse(StringReader reader) throws CommandSyntaxException {
@@ -46,7 +46,7 @@ public class MacroArgumentType implements ArgumentType<Macro> {
 
     @Override
     public CompletableFuture<Suggestions> listSuggestions(CommandContext context, SuggestionsBuilder builder) {
-        return SharedSuggestionProvider.suggest(Macros.get().getAll().stream().map(macro -> {
+        return CommandSource.suggestMatching(Macros.get().getAll().stream().map(macro -> {
             String name = macro.name.get();
             if (name.contains(" ")) {
                 name = "\"" + name.replace("\"", "\\\"") + "\"";
@@ -58,6 +58,6 @@ public class MacroArgumentType implements ArgumentType<Macro> {
 
     @Override
     public Collection<String> getExamples() {
-        return Macros.get().getAll().stream().limit(3).map(macro -> macro.name.get()).toList();
+        return Macros.get().getAll().stream().limit(3).map(macro -> macro.name.get()).collect(Collectors.toList());
     }
 }
